--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name</title>
+  <title>Anirudh Patel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,14 +11,14 @@
     <div class="header">
       <img src="your_photo.jpg" alt="Your Photo" class="profile-pic">
       <div class="info">
-        <h1>Your Name</h1>
-        <p><strong>PhD Astrophysics (Sept 20XX – May 20XX)</strong></p>
-        <p><strong>Your Fellowships</strong></p>
-        <p><strong>Your University</strong></p>
+        <h1>Anirudh Patel</h1>
+        <p><strong></strong></p>
+        <p><strong></strong></p>
+        <p><strong>Columbia University</strong></p>
         <p>
           Address line 1<br>
           Address line 2<br>
-          your{dot}email{at}institution{dot}edu
+          anirudh.p@columbia.edu
         </p>
       </div>
     </div>
@@ -27,11 +27,11 @@
 
     <h2>Research</h2>
     <p>
-      Your short research description goes here. You can mention what you study, how you study it, and your methods or tools.
+      
     </p>
 
     <p>
-      Check out <a href="https://scholar.google.com">Google Scholar</a> for a list of publications.
+      Check out <a href="https://inspirehep.net/authors/2875143?ui-citation-summary=true">Inspire HEP</a> for a list of publications.
     </p>
   </div>
 
