--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Anirudh Patel</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+  body {
+    border: 5px solid red;
+  }
+</style>
 </head>
 <body>
 
