--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <p><strong></strong></p>
         <p><strong>Columbia University</strong></p>
         <p>
-          Address line 1<br>
-          Address line 2<br>
+<!--           Address line 1<br>
+          Address line 2<br> -->
           anirudh.p@columbia.edu
         </p>
       </div>
